auto-test/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/distinct_union_types.c
int foo(void) {
    union s {
        int a;
        long b;
    };
    union s result = {1};
    return result.a;
}

int main(void) {
    
    
    union s;
    
    union s blah = {foo()};
    return blah.a;
}